contact us section

--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Discover Hye Ne Preko Agrochemical Products – your trusted partner in sustainable farming. Learn about our organic fertilizers, weedicides, and expert farming guides to boost crop yields and efficiency."
+    />
+
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Hye Ne Preko Enterprise</title>
   </head>
   <body>
     <div id="root"></div>
