developed hero sectio

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       name="description"
       content="Discover Hye Ne Preko Agrochemical Products – your trusted partner in sustainable farming. Learn about our organic fertilizers, weedicides, and expert farming guides to boost crop yields and efficiency."
     />
+    <!-- google font -->
 
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
