--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <!-- google font -->
 
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="" href="/src/assets/logos/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hye Ne Preko Enterprise</title>
   </head>
