hero text changed, meta content description changed

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Discover Hye Ne Preko Agrochemical Products – your trusted partner in sustainable farming. Learn about our organic fertilizers, weedicides, and expert farming guides to boost crop yields and efficiency."
+      content="Increase your harvest with HNP’s organic fertilizers & weedicides. Trusted agrochemical solutions in Ghana for sustainable and efficient farming."
     />
     <!-- google font -->
 
